--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -869,6 +869,7 @@ td.highlighted {
     font-weight: 700;
     font-size: 1.5rem;
     background: linear-gradient(to right, #fff, var(--primary));
+    background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     letter-spacing: 1px;
